fixed link overflow issue in nav menu

--- a/final_home_page/Final_Second_page/Styles/Final_Second_Page.css
+++ b/final_home_page/Final_Second_page/Styles/Final_Second_Page.css
@@ -31,9 +31,6 @@ html {
     width: 230px;
     margin-left: 2px;
  }
- #fuckthis{
-    width: -100px;
- }
  #nav_menu ul li a {
     text-align: center;
     display: block;
